=================
Changes for Crate
=================

Unreleased
==========

 - Fixed an issue that could cause `COPY FROM` to ignore a primary key
   constraint leading to duplicate rows.
   This could happen if a table has multiple primary keys and clustered by is
   set to one primary key column other than the first primary key column.

 - Fixed an issue that could cause long running operations to get killed

 - Fixed an issue where the `orphan_partition` column in the `sys.shards` table
   could return a wrong result if the shard was part of a custom table.

 - Fixed an issue that caused stuck jobs to return an empty result instead of
   an error.

 - Added cluster checks which are exposed via the ``sys.checks`` table.

 - Exposed the cluster gateway settings

 - Added ``os_info`` column to ``sys.nodes`` table.
   Currently the column only lists the number of available processors in the JVM
   (which is usually equal to the number of cores of the CPU).

 - Upgraded Elasticsearch to 1.7.1
   This update changes the default value for delayed allocation of unassigned
   shards (see: `https://crate.io/docs/en/latest/configuration.html#unassigned`_).
   Also updated the upstream of EC2 discovery module

2015/08/13 0.51.1
=================

 - Improved retry logic of EC2 unicast host discovery mechanism

 - Updated crate-admin to 0.14.3 which includes the following changes:

   - fixed line wrapping in console result table

 - Fixed an issue which could cause the blob recovery process to hang under some
   rare circumstances

 - Fixed an issue that caused ``COPY TO .. s3`` statements to leave the cluster
   in an inaccessible state

 - Fixed a deadlock that could occur if queries with high offset or limit were
   executed concurrently

 - Fixed an issue that could cause a count function on partitioned tables
   to cause an error if a partition was deleted concurrently.

2015/08/06 0.50.3
=================
